--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,3 +80,154 @@ body {
   padding: 5px;
   border-radius: 50%;
 }
+
+/* ----------------------------buttons--------------------- */
+.button {
+  display: inline-block;
+  border-radius: 25px;
+  padding: 12px 50px;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+}
+.button-primary {
+  background: #f47322;
+  color: #fff;
+}
+.button-defaul {
+  background: #fff;
+  color: #5f5f61;
+}
+/* ---------------------slider----------------------------- */
+.slide {
+  position: relative;
+  border-radius: 20px;
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  padding: 100px;
+
+  /* чтоб спрятать то, что выпирает (тут уголки из-за скругления): */
+  overflow: hidden;
+}
+.slide-text-light {
+  background-color: gray;
+  color: white;
+}
+.slide-content {
+  position: relative;
+  min-width: 400px;
+}
+.slide-title {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 51px;
+}
+.slide-text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 30px;
+}
+.slide-summer {
+  background-image: url("../images/summer.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.43) 40.45%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+/*------------------------- promo -----------------------*/
+.promo {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+.card {
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  border-radius: 20px;
+  padding: 32px;
+  min-width: 570px;
+  min-height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.card:before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+}
+.card-text-light {
+  color: #fff;
+}
+.card-title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-top: 4px;
+  margin-bottom: 21px;
+}
+.card-discription {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  min-width: 200px;
+}
+.card-price {
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-bottom: 8px;
+}
+.card-dilivery {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 25px;
+}
+
+/* -----------------картинки в промо--------------------------------- */
+/* .sweet-basket {
+  background: url("../images/sweet-basket.png") no-repeat center/ cover;
+ 
+}
+.min-h {
+  background-image: url("../images/min-h.png");
+} */
+.card-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  object-fit: cover;
+}
